# pluggy

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
docs/examples/eggsample-spam/: eggsample_spam.py
docs/examples/eggsample/eggsample/: hookspecs.py  host.py  lib.py
scripts/: read_benchmarks.py  release.py
src/pluggy/: _callers.py  _hooks.py  _manager.py  _tracing.py  _typing.py
testing/: benchmark.py  conftest.py  test_details.py  test_helpers.py  test_hookcaller.py  test_invocations.py  test_multicall.py  test_pluginmanager.py  test_result.py  test_warnings.py
